fixing errors with pricing

--- a/pricing.html
+++ b/pricing.html
@@ -78,13 +78,13 @@
         >
           <ul class="navbar-nav text-uppercase font-weight-bold">
             <li class="nav-item">
-              <a href="#" class="nav-link text-light">Courses</a>
+              <a href="courses.html" class="nav-link text-light">Courses</a>
             </li>
             <li class="nav-item active" aria-current="true">
               <a href="#" class="nav-link color-primary">Pricing</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link text-light">Login</a>
+              <a href="homepage.html" class="nav-link text-light">Login</a>
             </li>
           </ul>
         </div>
@@ -94,8 +94,8 @@
     <div class="jumbotron jumbotron-fluid pricing mb-0">
       <div class="container text-center text-light mt-5">
         <h2 class="text-center pt-5 mt-5 mb-5 font-weight-light">
-          what is <img src="/images/smile_off.png" alt="smile" width="30" />
-          <img src="/images/logo.png" alt="logo" width="200" /> ?
+          what is <img src="./images/smile_off.png" alt="smile" width="30" />
+          <img src="./images/logo.png" alt="logo" width="200" /> ?
         </h2>
         <h3 class="display-3 pt-5 font-weight-bold">Go pro!</h3>
       </div>
@@ -114,7 +114,7 @@
                 <div class="col-md-3 text-center">
                   <img
                     src="./images/profile_5.jpg"
-                    alt="..."
+                    alt="smiling male profile"
                     class="rounded-circle"
                     width="150"
                   />
@@ -141,7 +141,7 @@
                 <div class="col-md-3 text-center">
                   <img
                     src="./images/profile_5.jpg"
-                    alt="..."
+                    alt="smiling male profile"
                     class="rounded-circle"
                     width="150"
                   />
@@ -234,7 +234,7 @@
         class="container text-center d-flex justify-content-between mt-5 pb-5"
       >
         <a href=""
-          ><img src="/images/smile_off.png" alt="Smile logo" width="40" /><img
+          ><img src="./images/smile_off.png" alt="Smile logo" width="40" /><img
             width="150"
             src="./images/logo.png"
             alt="Smile School logo"
